--- a/CSS/style9.css
+++ b/CSS/style9.css
@@ -65,7 +65,7 @@ display: flex;
 width: 100%;
 height: 25%;
 background-color: #278fce;
-background-image: url(img/huellas.png);
+background-image: url(../img/huellas.png);
 background-size: contain;
 
     }
