--- a/CSS/style.css
+++ b/CSS/style.css
@@ -112,7 +112,7 @@ font-size: 22px;
       background-image: url(../img/perro.jpeg);
       background-repeat: no-repeat;
       background-position: 90vh;
-      background-size: contain;
+      background-size: 8vh;
       
         
     }
