base de datos y resposive

--- a/CSS/style4.css
+++ b/CSS/style4.css
@@ -13,7 +13,25 @@ body{
     display: flex;
 width: 100%;
 height: 15vh;
+justify-content: center;
+align-items: center;
 
+
+
+}
+.contentheader .logo{
+display: flex;
+align-items: center;
+justify-content: center;
+width: 18%;
+height: 90%;
+
+
+
+}
+.logo .mencion{
+width: 100%;
+height: 100%;
 
 
 }
@@ -128,7 +146,7 @@ color: #278fce;
     margin: 20px;
 
 flex-direction: column;
-border-radius: 50px;
+border-radius: 7vh;
 
 }
 
@@ -145,8 +163,7 @@ border-radius: 50px;
 .logito .redi{
 width: 30%;
 height: 100%;
-position: relative;
-top: 20px;
+
 
 }
 .contenedorimagenes1{
@@ -280,4 +297,315 @@ height: 70%;
 
 
 }
+@media(max-width:725px){
 
+    .texto_centro .texti{
+        font-family: hatton;
+        font-size: 2.5vh;
+        
+    
+    
+    
+    }
+    @media(orientation:portrait){
+        .contentheader{
+            display: flex;
+        width: 100%;
+        height: 15vh;
+        
+        
+        
+        }
+        .contentheader .logo{
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            width: 30%;
+            height: 90%;
+            
+            
+            
+            }
+            .logo .mencion{
+            width: 100%;
+            height: 100%;
+            
+            
+            }
+        .maincontainermiddle{
+            display: flex;
+            width: 100%;
+            height: 70vh;
+           flex-direction: column;
+           justify-content: center;
+           align-items: center;
+            background-color: #959ea1;
+        
+        
+        }
+        .maincontainermiddle .contenido1{
+            display: flex;
+            flex-direction: column;
+            width: 88%;
+            height: 65vh;
+      
+            
+        }
+        .contenido1 .tittle{
+            display: flex; 
+            justify-content: center;
+            align-items: center;
+            text-align: center;
+        width: 100%;
+        height: 20%;
+        background-color: darkblue;
+        
+        
+        
+        
+        }
+        .contenido1 .texto_centro{
+            display: flex;
+            flex-direction: column;
+            
+            
+        width: 75%;
+        height: 50%;
+        background-color: darkgoldenrod;
+        
+        
+        
+        }
+         .contenido1 .contener{
+        display: flex;
+        width: 87%;
+        height: 35%;
+        background-color: cyan;
+        margin-left: 13%;
+        
+        
+        
+        }
+        .contener .contener1{
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            text-align: center;
+            width: 60%;
+            height: 100%;
+           
+            margin-left: 13%;
+            
+            
+            
+            }
+            .contener1 .blue{
+                color: #278fce;
+                font-family: hatton;
+                font-size: 2vh;
+        
+        
+            }
+            .contener .contener2{
+                display: flex;
+                width: 30%;
+                height: 100%;
+               
+        
+        
+            }
+            .contener2 .cora{
+        width: 100%;
+        height: 100%;
+        
+        
+            }
+        .texto_centro .texti{
+            font-family: hatton;
+            font-size: 2.0vh;
+            
+        
+        
+        
+        }
+        .tittle .internal_text{
+        font-family: hatton;
+        font-size: 3vh;
+        color: #278fce;
+        
+        
+        }
+        
+        
+        
+        .maincontainermiddle .contenido2{
+            display: none;
+        
+            width: 60%;
+            height: 15vh;
+            background-color:  #ade2f8;
+            
+        
+        flex-direction: column;
+        border-radius: 50px;
+        
+        }
+        
+        .contenido2 .logito{
+            display: flex;
+            width: 100%;
+            height: 8vh;
+            background-color:  #31373a;
+            border-top-left-radius: 50px;
+               border-top-right-radius: 50px;
+               justify-content: center;
+               align-items: center;
+        }
+        .logito .redi{
+        width: 30%;
+        height: 100%;
+        position: relative;
+       
+        background-color: darkgreen;
+        
+        }
+        .contenedorimagenes1{
+        display: flex;
+        
+        width: 100%;
+        height: 48%;
+        
+        align-items: end;
+        justify-content: center;
+        background-color: darkcyan;
+        
+        
+        
+        }
+        .contenedorimagenes1 .img1{
+            display: flex;
+            width: 38%;
+            height: 85%;
+           
+        
+           
+            }
+            .img1 .best1{
+                width: 100%;
+            }
+            .img2 .best2{
+        width: 100%;
+        
+            }
+            
+            .contenedorimagenes1 .img2{
+            display: flex;
+            width: 42%;
+            height: 85%;
+        
+            
+            }
+            
+            .contenedorimagenes2{display: flex;
+        
+                width: 100%;
+                height: 40%;
+               
+               border-bottom-left-radius: 50px;
+               border-bottom-right-radius: 50px;
+            }
+                .contenedorimagenes2 .img3
+        {
+            display: flex;
+            width: 52%;
+            height: 70%;
+            
+            margin-left: 5%;
+        
+        
+        }
+        .img3 .best3{
+        width: 100%;
+        
+        
+        }
+        .contenedorimagenes2 .img4
+        {
+            display: flex;
+            width: 45%;
+            height: 100%;
+         
+            justify-content: end;
+            border-bottom-right-radius: 50px;
+            
+        
+        
+        }
+        .img4 .cora {
+            border-bottom-right-radius: 50px;
+        
+        
+        }
+            
+            
+        
+        
+        .pie{
+            display: flex;
+            width: 100%;
+            height: 15vh;
+            
+        
+        
+           
+        }
+        .pie .piess{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+        height: 100%;
+        
+        
+        }
+        .piess .container_dog{
+            display: flex;
+        width: 30%;
+        height: 100%;
+        align-items: center;
+        
+        
+        
+        }
+        .container_dog .canva_perro{
+            width: 100%;
+            height: 65%;
+             } 
+        .piess .orange_huellas{
+            display: flex;
+        width: 10%;
+        height: 50%;
+        align-items: center;
+        
+        
+        }
+        .piess .container_huellas{
+            display: flex;
+        width: 15%;
+        height: 45%;
+        
+        
+        
+        
+        }
+        .container_huellas .orange_huellas{
+            margin-top: 7%;
+        width: 100%;
+        height: 70%;
+        
+        
+        }
+
+
+    }
+}
