--- a/CSS/style7.css
+++ b/CSS/style7.css
@@ -145,10 +145,10 @@ transform: rotate(360deg);
     }
     
     .icono_general .letter{
-       font-family:hatton;font-size: 120%;
+       font-family:hatton;font-size: 3vh;
 
 text-decoration: none;
-font-weight:900;
+
 color: #2e8dc6;
 
 
@@ -157,7 +157,7 @@ color: #2e8dc6;
         transition: 1s;
      
 background-color: orange;
-border-radius: 200px;
+border-radius: 10vh;
 
     }
 
@@ -169,9 +169,192 @@ border-radius: 200px;
         flex-direction: column;
 width: 100%;
 height: 10vh;
+font-size: 2vh;
 background-color: #2e8dc6;
 justify-content: end;
 align-items: center;
 
     }
-    
+    @media(orientation:portrait){
+        .contenedor1{
+            display: flex;
+        width: 100%;
+        height: 20vh;
+        justify-content: center;
+        align-items: center;
+        
+        
+        
+        }
+        .contenedor1 .contenido
+        {
+            display: flex;
+          
+           
+        width: 40%;
+        height:50% ;
+        
+        justify-content: center;
+        align-items: center;
+        position: relative;
+        right: 1.0vh;
+        
+        
+        
+        
+        
+        }
+        .contenedor1 .contenido .nav_logo .img_logo{
+            width: 100%;
+            height: 80%;
+          
+        
+        
+        }
+        .middle_contenedor{
+            display: flex;
+            flex-direction: column;
+        width: 100%;
+        height: 70vh;
+        
+        
+        }
+        .middle_contenedor .contenido1{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        width: 100%;
+        height: 55%;
+        
+        
+        
+        
+        }
+        .contenido1 .titulo{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        text-align: center;
+        align-items: center;
+     
+        width: 100%;
+        height: 20%;
+        
+        
+        
+        }
+        .titulo .main_tittle{
+            font-family:hatton;font-size: 5vh;
+         
+        
+            text-decoration: none;
+            color: #2e8dc6;
+        
+        
+        
+        }
+        .contenido1 .texto{
+            display: flex;
+        width: 85%;
+        height: 100%;
+       
+        
+        
+        }
+        .texto .description{
+            font-family:hatton;font-size: 2vh;
+         font-weight:600;
+        margin-top: 10%;
+           
+        
+        
+        
+        }
+        .middle_contenedor .contenido2{
+            display: flex;
+           flex-direction: column;
+           flex-wrap: wrap;
+            width: 100%;
+            height: 40%;
+            
+          
+            
+            
+            }
+            .contenido2 .icono{
+                display: flex;
+                width: 100%;
+                height: 50%;
+                
+             
+        
+        
+            }
+            .contenido2 .icono_general{
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+                align-items: center;
+                width: 50%;
+                height: 100%;
+               
+               
+        
+        
+            }
+            .icono_general .ceta{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 40%;
+        height: 60%;
+        
+        
+            }
+            .icono_general .size_images{
+        width: 100%;
+        height: 100%;
+        
+        
+            }
+            .size_images:hover{
+                transition: 1s;
+        transform: rotate(360deg);
+        
+        
+        
+            }
+            
+            .icono_general .letter{
+               font-family:hatton;font-size: 1.5vh;
+        
+        text-decoration: none;
+        
+        color: #2e8dc6;
+        
+        
+            }
+            .letter:hover{
+                transition: 1s;
+             
+        background-color: orange;
+        border-radius: 10vh;
+        
+            }
+        
+        
+        
+        
+            .pie{
+                display: flex;
+                flex-direction: column;
+        width: 100%;
+        height: 10vh;
+        font-size: 2vh;
+        background-color: #2e8dc6;
+        justify-content: end;
+        align-items: center;
+        text-align: center;
+
+
+    }}
