--- a/CSS/style2.css
+++ b/CSS/style2.css
@@ -173,6 +173,39 @@ color: #d9862c;
 font-size: 2vh;
 
        }
+@media(orientation:portrait){
+    .org{
+        display: flex;
+    justify-content: center;
+    align-items: center;
+    
+        width: 100%;
+        height: 20vh;
+        
+        
+    
+        }
+      .org .cont{
+    
+        display: flex;
+        width: 40%;
+        height: 80%;
+       align-items: center;
+       justify-content: center;
+       
+       
+       
+    
+      }
+      .cont .img5{
+    
+            width: 100%;
+            height: 100%;
+          
+            
+            
+        }
 
+}
            
        
